test/invalid/idl/void-keyword.webidl
[Exposed=Window]
interface Foo {
  void foo();
};
